[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Rhuan Emanuel <rhnrod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
factory-boy = "^3.3.1"
django = "^5.1.3"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^5.1.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.2.0"
whitenoise = "^6.9.0"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookstore.settings"
python_files = ["test*.py", "*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
